--- a/src/stylus/_global/_global.styl
+++ b/src/stylus/_global/_global.styl
@@ -7,6 +7,16 @@ body
   font-family: 'Noto Sans', 'Abel'
   margin: 0
   background: #C5C2CB
+  min-height: 100vh
+
+html
+  min-height: 100vh
+
+#app
+  min-height: 100vh
+  display: flex
+  flex-direction: column
+  
 
 [role="GameName"]
   text-align: center
